登录的具体实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".register.RegisterActivity" />
-        <activity android:name=".SuccessfulActivity"></activity>
+        <activity android:name=".SuccessfulActivity" />
+        <activity android:name=".login.LoginActivity"></activity>
     </application>
 
 </manifest>
